@@ -4,5 +4,13 @@
  * Implements hook_install().
  */
 function dkan_install() {
+}
 
+/**
+ * Reverts dkan_sitewide to add Markdown HTML filter.
+ * Sets up roleassign feature.
+ */
+function dkan_update_7001() {
+  module_load_include("profile", "dkan");
+  dkan_bueditor_markdown_install();
 }
