@@ -2,7 +2,7 @@ name = DKAN Dataset
 description = Custom elements for Datasets.
 core = 7.x
 package = DKAN
-version = 7.x-1.12.9
+version = 7.x-1.12.10
 project = dkan_dataset
 dependencies[] = autocomplete_deluxe
 dependencies[] = beautytips
