@@ -2,7 +2,7 @@ name = DKAN Dataset Voting
 description = Adds voting to datasets.
 core = 7.x
 package = DKAN Features
-version = 7.x-1.12.9
+version = 7.x-1.12.10
 php = 5.2.4
 project = dkan_dataset_voting
 dependencies[] = ajax_comments
