@@ -2,7 +2,7 @@ name = DKAN Sitewide Panelizer
 description = DKAN module for simplifying the creation of panelized content
 core = 7.x
 package = DKAN
-version = 7.x-1.12.9
+version = 7.x-1.12.10
 project = dkan_sitewide_panelizer
 dependencies[] = panelizer
 dependencies[] = panels
