@@ -2,7 +2,7 @@ name = DKAN Default Topics
 description = Default topic terms.
 core = 7.x
 package = DKAN Features
-version = 7.x-1.12.9
+version = 7.x-1.12.10
 project = dkan_default_topics
 dependencies[] = dkan_topics
 dependencies[] = taxonomy_fixtures
