@@ -2,7 +2,7 @@ name = DKAN Workflow
 description = NuCivic Data publication workflow and related modules
 core = 7.x
 package = DKAN Workflow
-version = 7.x-1.12.9
+version = 7.x-1.12.10
 project = dkan_workflow
 dependencies[] = dkan_workflow_permissions
 dependencies[] = entity
